fix bug with header opactiy; wrap prmopt in mobile check

--- a/includes/css/tec_default.css
+++ b/includes/css/tec_default.css
@@ -345,7 +345,7 @@ button:not(.toggle).tec_dm_button {
     background-color: var(--ted-dgreen);
     padding-left: 5px;
     transition: all ease 0.5s;
-    opacity: 0;
+    opacity: 1;
     z-index: 1;
 }
 
